--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "twitter-ai-agent",
+  "name": "client",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  }
 }
